@@ -1444,6 +1444,14 @@ using the scan parameter. \
 The raw cloth for knitting is found using the Butchering, Shearing, or Foraging \
 skills.
 
+TAN=TANNING
+TANNING=<ABILITY>\
+Usage    : TAN [HIDE ITEM NAME]\n\r\
+Example  : TAN hide\n\r\
+This skill allows a player to tan hide resources items until \
+they are a leather usable by Leatherworking and other skills. \
+It require thats a fire be built before tanning can begin.  \
+
 TATTOOING=<ABILITY>\
 Usage    : TATTOOING [TARGET NAME] [LOCATION] (REMOVE)/[TATTOO DESCRIPTION]\n\r\
 Example  : tattooing bob arms a skull and crossbones\n\r\
